# mitsugen

./: install.sh  install_smooth.sh  pyproject.toml  run.sh  verify_generation_logic.py
assets/MeowterialYou-dark/: index.theme
assets/MeowterialYou-light/: index.theme
example/: config.ini
example/templates/: gnome-shell-dark.css  gnome-shell.css  gtk.css  gtk_3_dark.css  gtk_3_light.css  gtk_dark.css
src/: main.py  monitor.py  util.py
src/applier/: domain.py
src/material_color_utilities_python/utils/: theme_utils.py
src/ui/: app.py
src/ui/widgets/: colors_popover.py
