[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitsugen"
version = "0.2.0"
description = "Material You theming for Linux desktops"
authors = [
    {name = "Dimitris Milonopoulos", email = "dimitriosmilonopoulos@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.3.1",
    "pillow>=9.4.0",
    "pygobject==3.46.0",
    "material-color-utilities-python>=0.1",
    "pydantic>=1.10.8",
    "regex>=2023.5.5",
    "numpy>=1.24.3",
]

[project.scripts]
mitsugen = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
